--- a/app/src/main/res/layout/alert_log_activity.xml
+++ b/app/src/main/res/layout/alert_log_activity.xml
@@ -36,6 +36,17 @@
                 android:layout_centerVertical="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_arrow_back_white_24px" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/refresh_imageview"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
+                android:layout_marginEnd="@dimen/toolbar_icon_margin"
+                android:layout_marginTop="@dimen/toolbar_icon_margin"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="8dp"
+                android:src="@drawable/ic_reload" />
         </RelativeLayout>
     </LinearLayout>
     <!-- end of navigation bar -->
