--- a/app/src/main/res/layout/alertlog_list_data.xml
+++ b/app/src/main/res/layout/alertlog_list_data.xml
@@ -99,7 +99,34 @@
                             android:textColor="@color/black"
                             android:textSize="14sp" />
                     </LinearLayout>
-
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content">
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                                android:layout_width="0dp"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="0.4"
+                            android:text="@string/description"
+                            android:textColor="@color/light_grey2"
+                            android:textSize="14sp"
+                            android:gravity="center|left" />
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                            android:layout_width="0dp"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="0.1"
+                            android:text="@string/colon"
+                            android:textColor="@color/light_grey2"
+                            android:textSize="14sp"
+                            android:gravity="center|left" />
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                            android:id="@+id/obj_text_textview"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="left|center"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="fill_parent"
@@ -190,6 +217,35 @@
                             android:textSize="14sp" />
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content" >
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                            android:layout_width="0dp"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="0.4"
+                            android:text="@string/msg"
+                            android:textColor="@color/light_grey2"
+                            android:textSize="14sp"
+                            android:gravity="center|left" />
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                            android:layout_width="0dp"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="0.1"
+                            android:text="@string/colon"
+                            android:textColor="@color/light_grey2"
+                            android:textSize="14sp"
+                            android:gravity="center|left" />
+                        <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                            android:id="@+id/message_textview"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="left|center"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
                 </LinearLayout>
             </FrameLayout>
         </com.enstrapp.fieldtekpro.Swipe.SwipeRevealLayout>
@@ -220,11 +276,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/message_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+
 
     <TextView
         android:id="@+id/Appmode_textview"
