--- a/app/src/main/res/layout/calibration_orders_operations_activity.xml
+++ b/app/src/main/res/layout/calibration_orders_operations_activity.xml
@@ -2,67 +2,74 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <!-- Header aligned to top -->
-
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:gravity="center" >
+        android:gravity="center">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="49dp"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
-                <LinearLayout android:layout_width="fill_parent"
-                    android:layout_height="49dp"
-                    android:gravity="center">
-                    <RelativeLayout
-                        android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="56dp"
+                android:gravity="center">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:background="@color/colorPrimary"
+                    app:layout_scrollFlags="scroll|enterAlways">
+
+                    <ImageButton
+                        android:id="@+id/home_imageview"
+                        android:layout_width="@dimen/default_icon_size"
+                        android:layout_height="@dimen/default_icon_size"
+                        android:layout_marginStart="@dimen/toolbar_icon_margin"
+                        android:layout_marginTop="@dimen/toolbar_icon_margin"
+                        android:background="@color/colorPrimary"
+                        android:src="@drawable/ic_arrow_back_white_24px" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:orientation="horizontal">
+
                         <com.enstrapp.fieldtekpro.customfont.Font_TextView
                             android:id="@+id/title_textview"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/operations"
-                            android:textSize="18sp"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:textColor="@color/white"/>
-                        <android.support.v7.widget.AppCompatImageView
-                            android:id="@+id/home_imageview"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_alignParentLeft="true"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/ic_arrow_back_white_24px"
-                            android:padding="5dp"/>
-                    </RelativeLayout>
-                </LinearLayout>
-            </android.support.v7.widget.Toolbar>
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="@string/orders"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/toolbar_text_size" />
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:tabMode="scrollable"
-                app:tabGravity="fill"
+                android:layout_height="48dp"
                 android:background="@color/colorPrimary"
-                style="@style/AppTabTextAppearance"
-                app:tabTextAppearance="@style/AppTabTextAppearance">
-            </android.support.design.widget.TabLayout>
+                app:tabGravity="center"
+                app:tabIndicatorColor="@color/white"
+                app:tabMode="scrollable"
+                app:tabPaddingEnd="15dp"
+                app:tabPaddingStart="15dp"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextAppearance="@style/Tab.TextAppearence"
+                app:tabTextColor="@color/colorPrimary_light" />
 
         </android.support.design.widget.AppBarLayout>
     </RelativeLayout>
@@ -72,37 +79,43 @@
     <RelativeLayout
         android:id="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
-        android:background="@color/colorPrimaryDark">
-        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <com.enstrapp.fieldtekpro.customfont.Font_Button
                 android:id="@+id/cancel_button"
                 android:layout_width="0dp"
-                android:layout_height="49dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@color/colorPrimary"
                 android:padding="15dp"
                 android:text="@string/cancel"
-                android:textSize="16sp"
                 android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"/>
+                android:textSize="16sp" />
+
             <View
                 android:layout_width="2dp"
                 android:layout_height="20dp"
-                android:background="@color/white"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:background="@color/white" />
+
             <com.enstrapp.fieldtekpro.customfont.Font_Button
                 android:id="@+id/submit_button"
                 android:layout_width="0dp"
-                android:layout_height="49dp"
+                android:layout_height="48dp"
                 android:layout_weight="1"
+                android:background="@color/colorPrimary"
                 android:padding="15dp"
                 android:text="@string/submit"
-                android:textSize="16sp"
                 android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"/>
+                android:textSize="16sp" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -113,12 +126,13 @@
         android:layout_height="fill_parent"
         android:layout_above="@id/footer"
         android:layout_below="@id/header"
-        android:gravity="center" >
+        android:gravity="center">
+
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </RelativeLayout>
 
 </RelativeLayout>
