--- a/app/src/main/res/layout/calibration_start_inspection_activity.xml
+++ b/app/src/main/res/layout/calibration_start_inspection_activity.xml
@@ -52,45 +52,81 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/date_time_layout">
-            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
-                <LinearLayout android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:orientation="vertical">
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <LinearLayout android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <com.enstrapp.fieldtekpro.customfont.Font_TextView
-                            android:textSize="18sp" android:textColor="@color/red"
-                            android:text="@string/star" android:layout_gravity="left"
-                            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                            android:textSize="18sp"
+                            android:textColor="@color/red"
+                            android:text="@string/star"
+                            android:layout_gravity="left"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                         <com.enstrapp.fieldtekpro.customfont.Font_TextView
-                            android:textSize="14sp" android:textColor="@color/black"
-                            android:text="@string/start_date" android:layout_gravity="left"
-                            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                            android:textSize="14sp"
+                            android:textColor="@color/black"
+                            android:text="@string/start_date"
+                            android:layout_gravity="left"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                     <com.enstrapp.fieldtekpro.customfont.Font_Button
-                        android:textSize="13sp" android:textColor="@color/black" android:gravity="left"
-                        android:id="@+id/stdatetime_button" android:layout_width="fill_parent" android:padding="5dp"
-                        android:layout_height="45dp" android:drawableRight="@drawable/ic_date_range_black_24px" android:background="@color/white"/>
+                        android:textSize="13sp"
+                        android:textColor="@color/black"
+                        android:gravity="left"
+                        android:id="@+id/stdatetime_button"
+                        android:layout_width="fill_parent"
+                        android:padding="5dp"
+                        android:layout_height="45dp"
+                        android:drawableRight="@drawable/ic_date_range_black_24px"
+                        android:background="@color/white"/>
                 </LinearLayout>
 
-                <LinearLayout android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <com.enstrapp.fieldtekpro.customfont.Font_TextView
-                            android:textSize="18sp" android:textColor="@color/red"
-                            android:text="@string/star" android:layout_gravity="left" android:layout_marginLeft="5dp"
-                            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                            android:textSize="18sp"
+                            android:textColor="@color/red"
+                            android:text="@string/star"
+                            android:layout_gravity="left"
+                            android:layout_marginLeft="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                         <com.enstrapp.fieldtekpro.customfont.Font_TextView
-                            android:textSize="14sp" android:textColor="@color/black"
-                            android:text="@string/end_date_time" android:layout_gravity="left" android:layout_marginLeft="5dp"
-                            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                            android:textSize="14sp"
+                            android:textColor="@color/black"
+                            android:text="@string/end_date_time"
+                            android:layout_gravity="left"
+                            android:layout_marginLeft="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                     <com.enstrapp.fieldtekpro.customfont.Font_Button
-                        android:textSize="13sp" android:textColor="@color/black" android:gravity="left" android:layout_marginLeft="5dp"
-                        android:id="@+id/enddatetime_button" android:layout_width="fill_parent" android:padding="5dp"
-                        android:layout_height="45dp" android:drawableRight="@drawable/ic_date_range_black_24px" android:background="@color/white"/>
+                        android:textSize="13sp"
+                        android:textColor="@color/black"
+                        android:gravity="left"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/enddatetime_button"
+                        android:layout_width="fill_parent"
+                        android:padding="5dp"
+                        android:layout_height="45dp"
+                        android:drawableRight="@drawable/ic_date_range_black_24px"
+                        android:background="@color/white"/>
                 </LinearLayout>
 
             </LinearLayout>
