--- a/app/src/main/res/layout/calibration_usagedecision_fragment.xml
+++ b/app/src/main/res/layout/calibration_usagedecision_fragment.xml
@@ -2,153 +2,181 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
-    android:padding="5dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
+
             <com.enstrapp.fieldtekpro.customfont.Font_TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ud_code"
                 android:textColor="@color/light_grey2"
-                android:textSize="15sp"/>
-            <com.enstrapp.fieldtekpro.customfont.Font_Button
-                android:id="@+id/udcode_button"
+                android:textSize="15sp" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:gravity="left|center"
-                android:padding="7dp"
-                android:background="@drawable/edittext_border"
-                android:drawableRight="@drawable/ic_arrow_drop_down_blue_24px"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <com.enstrapp.fieldtekpro.customfont.Font_Button
+                    android:id="@+id/udcode_button"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    android:background="@drawable/edittext_border"
+                    android:drawableRight="@drawable/ic_arrow_drop_down_blue_24px"
+                    android:gravity="left|center"
+                    android:padding="7dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+                <ImageView
+                    android:id="@+id/udcode_iv"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_width="48dp"
+                    android:layout_height="40dp" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.5"
+                    android:gravity="left|top"
                     android:text="@string/ud_code_text"
                     android:textColor="@color/light_grey2"
-                    android:textSize="15sp"
-                    android:gravity="left|top"/>
+                    android:textSize="15sp" />
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="-2dp"
                     android:layout_weight="0.1"
+                    android:gravity="center|top"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="16sp"
-                    android:gravity="center|top"
-                    android:layout_marginTop="-2dp"/>
+                    android:textSize="16sp" />
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:id="@+id/udcode_text_textview"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="-5dp"
                     android:layout_weight="1"
                     android:gravity="left|top"
                     android:padding="5dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:layout_marginTop="-5dp"/>
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.5"
+                    android:gravity="left|top"
                     android:text="@string/quality_score"
                     android:textColor="@color/light_grey2"
-                    android:textSize="15sp"
-                    android:gravity="left|top"/>
+                    android:textSize="15sp" />
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="-2dp"
                     android:layout_weight="0.1"
+                    android:gravity="center|top"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="16sp"
-                    android:gravity="center|top"
-                    android:layout_marginTop="-2dp"/>
+                    android:textSize="16sp" />
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:id="@+id/quality_score_textview"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="-5dp"
                     android:layout_weight="1"
                     android:gravity="left|center"
                     android:padding="5dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:layout_marginTop="-5dp"/>
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <com.enstrapp.fieldtekpro.customfont.Font_TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/notes"
                 android:textColor="@color/light_grey2"
-                android:textSize="15sp"
-                android:layout_marginTop="10dp"/>
+                android:textSize="15sp" />
+
             <com.enstrapp.fieldtekpro.customfont.Font_Edittext
                 android:id="@+id/notes_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/edittext_border"
                 android:gravity="left|top"
-                android:padding="7dp"
-                android:textColor="@color/black"
-                android:textSize="15sp"
                 android:maxLength="80"
                 android:minLines="3"
-                android:background="@drawable/edittext_border"/>
+                android:padding="7dp"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:visibility="gone">
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.5"
+                    android:gravity="left|top"
                     android:text="@string/valuation"
                     android:textColor="@color/light_grey2"
-                    android:textSize="15sp"
-                    android:gravity="left|top"/>
+                    android:textSize="15sp" />
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="-2dp"
                     android:layout_weight="0.1"
+                    android:gravity="center|top"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="16sp"
-                    android:gravity="center|top"
-                    android:layout_marginTop="-2dp"/>
+                    android:textSize="16sp" />
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:gravity="left">
+
                     <ImageView
                         android:id="@+id/valuation_imageview"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:padding="5dp"/>
+                        android:padding="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
