--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -27,7 +27,8 @@
 	        android:text="@string/app_name"/>
 
      <com.enstrapp.fieldtekpro.customfont.Font_Button
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
+		    android:background="@color/colorPrimary"
             android:textSize="15sp"
             android:layout_gravity="center"
             android:id="@+id/ok_button" 
