--- a/app/src/main/res/layout/sendmessage_list_data.xml
+++ b/app/src/main/res/layout/sendmessage_list_data.xml
@@ -1,111 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" 
-    android:background="@drawable/blueborder"
-    android:id="@+id/layout"
-	android:layout_marginBottom="8dp">
-    
-    <LinearLayout 
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+	android:id="@+id/layout"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:layout_marginStart="8dp"
+	android:layout_marginTop="8dp"
+	android:layout_marginEnd="8dp"
+	android:background="@drawable/blueborder"
+	android:orientation="horizontal">
 
-    	<LinearLayout 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"
-	    android:layout_gravity="center" >
-	    	<com.enstrapp.fieldtekpro.customfont.Font_Checkbox
-	        android:id="@+id/checkbox"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"/>
-	    </LinearLayout>
+	<com.enstrapp.fieldtekpro.customfont.Font_Checkbox
+		android:id="@+id/checkbox"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:layout_marginStart="8dp" />
 
-    	<LinearLayout 
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical" android:layout_margin="5dp">
-	    		
-    	        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
-			        <LinearLayout android:layout_width="0dp" android:layout_weight="1.8" android:layout_height="wrap_content" android:orientation="vertical">
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="4dp"
+		android:orientation="horizontal">
 
-							<LinearLayout
-						       android:layout_width="fill_parent"
-						       android:layout_height="wrap_content" >
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:layout_width="0dp"
-						           android:layout_height="fill_parent"
-						           android:layout_weight="0.5"
-						           android:text="Mob. User"
-						           android:textColor="@color/light_grey2"
-						           android:textSize="14sp"
-						           android:gravity="center|left" />
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:layout_width="0dp"
-						           android:layout_height="fill_parent"
-						           android:layout_weight="0.1"
-						           android:text="@string/colon"
-						           android:textColor="@color/light_grey2"
-						           android:textSize="14sp"
-						           android:gravity="center|left" />
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:id="@+id/muser_textview"
-						           android:layout_width="0dp"
-						           android:layout_height="wrap_content"
-						           android:layout_weight="1"
-						           android:layout_gravity="left|center"
-						           android:textColor="@color/black"
-						           android:textSize="14sp" />
-						   </LinearLayout>
-						   
-			            	<LinearLayout
-						       android:layout_width="fill_parent"
-						       android:layout_height="wrap_content" >
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:layout_width="0dp"
-						           android:layout_height="fill_parent"
-						           android:layout_weight="0.5"
-						           android:text="@string/name"
-						           android:textColor="@color/light_grey2"
-						           android:textSize="14sp"
-						           android:gravity="center|left" />
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:layout_width="0dp"
-						           android:layout_height="fill_parent"
-						           android:layout_weight="0.1"
-						           android:text="@string/colon"
-						           android:textColor="@color/light_grey2"
-						           android:textSize="14sp"
-						           android:gravity="center|left" />
-						       <com.enstrapp.fieldtekpro.customfont.Font_TextView
-						           android:id="@+id/name_textview"
-						           android:layout_width="0dp"
-						           android:layout_height="wrap_content"
-						           android:layout_weight="1"
-						           android:layout_gravity="left|center"
-						           android:textColor="@color/black"
-						           android:textSize="14sp" />
-						   </LinearLayout>
-						   
-			        </LinearLayout>
-			        <LinearLayout android:layout_width="0dp" android:layout_weight="0.3" android:layout_height="fill_parent" android:gravity="center" android:orientation="horizontal" android:layout_marginLeft="10dp">
-						<ImageView
-						        android:layout_width="40dp"
-						        android:layout_height="40dp" android:padding="10dp"
-						        android:src="@drawable/ic_right_arrow_icon"/>
-			        </LinearLayout>
-			    </LinearLayout>
-			    
-    	        <TextView
-		           android:id="@+id/token_id_textview"
-		           android:layout_width="0dp"
-		           android:layout_height="0dp" android:visibility="gone" />
+		<LinearLayout
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_weight="1.8"
+			android:layout_marginStart="4dp"
+			android:orientation="vertical">
 
-	    </LinearLayout>
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-   	</LinearLayout>
-   	
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:id="@+id/user_title"
+					android:layout_width="0dp"
+					android:layout_height="fill_parent"
+					android:layout_weight="0.5"
+					android:gravity="center|start"
+					android:text="@string/mob_user"
+					android:textColor="@color/light_grey2"
+					android:textSize="14sp" />
+
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:layout_width="0dp"
+					android:layout_height="fill_parent"
+					android:layout_weight="0.1"
+					android:gravity="center|start"
+					android:text="@string/colon"
+					android:textColor="@color/light_grey2"
+					android:textSize="14sp" />
+
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:id="@+id/muser_textview"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center|start"
+					android:layout_weight="1"
+					android:textColor="@color/black"
+					android:textSize="14sp" />
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content">
+
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:layout_width="0dp"
+					android:layout_height="fill_parent"
+					android:layout_weight="0.5"
+					android:gravity="center|start"
+					android:text="@string/name"
+					android:textColor="@color/light_grey2"
+					android:textSize="14sp" />
+
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:layout_width="0dp"
+					android:layout_height="fill_parent"
+					android:layout_weight="0.1"
+					android:gravity="center|start"
+					android:text="@string/colon"
+					android:textColor="@color/light_grey2"
+					android:textSize="14sp" />
+
+				<com.enstrapp.fieldtekpro.customfont.Font_TextView
+					android:id="@+id/name_textview"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center|start"
+					android:layout_weight="1"
+					android:textColor="@color/black"
+					android:textSize="14sp" />
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="0dp"
+			android:layout_height="fill_parent"
+			android:layout_marginStart="8dp"
+			android:layout_weight="0.3"
+			android:gravity="center"
+			android:orientation="horizontal">
+
+			<ImageView
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:padding="10dp"
+				android:src="@drawable/ic_right_arrow_icon" />
+		</LinearLayout>
+
+		<TextView
+			android:id="@+id/token_id_textview"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:visibility="gone" />
+	</LinearLayout>
 </LinearLayout>
