--- a/app/src/main/res/layout/notifications_header_fragment.xml
+++ b/app/src/main/res/layout/notifications_header_fragment.xml
@@ -109,6 +109,7 @@
                     android:hint="@string/notification_text_star"
                     android:inputType="text"
                     android:maxLines="1"
+                    android:maxLength="40"
                     android:textSize="@dimen/textSize" />
             </android.support.design.widget.TextInputLayout>
             <ImageView
